# juicy-ai-glasses

.cursor/plans/: ai_glasses_platform_plan_93429d30.plan.md
aiglasses/: .gitignore  CONTRIBUTING.md  Dockerfile.test  LICENSE  README.md  pyproject.toml
aiglasses/.github/workflows/: ci.yml
aiglasses/camera/: index.html  package-lock.json  package.json  server.py  start.sh  tsconfig.json  vite.config.ts
aiglasses/camera/src/: App.css  App.tsx  index.css
aiglasses/configs/: aiglasses.yaml
aiglasses/examples/what_am_i_seeing/: __init__.py  __main__.py  app.py  manifest.yaml
aiglasses/proto/: app_runtime.proto  audio.proto  camera.proto  common.proto  device_manager.proto  llm_gateway.proto  ota.proto  speech.proto  storage.proto  vision.proto
aiglasses/scripts/: install-services.sh
aiglasses/src/aiglasses/: __init__.py  cli.py  config.py
aiglasses/src/aiglasses/common/: __init__.py  events.py  grpc_utils.py  health.py  logging.py  service.py
aiglasses/src/aiglasses/foundation/: __init__.py
aiglasses/src/aiglasses/foundation/app_runtime/: __init__.py  grpc_servicer.py  service.py
aiglasses/src/aiglasses/foundation/audio/: __init__.py  grpc_servicer.py  service.py
aiglasses/src/aiglasses/foundation/camera/: __init__.py  grpc_servicer.py  service.py
aiglasses/src/aiglasses/foundation/device_manager/: __init__.py  grpc_servicer.py  service.py
aiglasses/src/aiglasses/foundation/llm_gateway/: __init__.py  grpc_servicer.py  service.py
aiglasses/src/aiglasses/foundation/ota/: __init__.py  grpc_servicer.py  service.py
aiglasses/src/aiglasses/foundation/speech/: __init__.py  grpc_servicer.py  service.py
aiglasses/src/aiglasses/foundation/storage/: __init__.py  grpc_servicer.py  service.py
aiglasses/src/aiglasses/foundation/vision/: __init__.py  grpc_servicer.py  hailo_detector.py  service.py
aiglasses/src/aiglasses/sdk/: __init__.py  app.py  audio.py  events.py  llm.py  manifest.py  vision.py
aiglasses/systemd/: aiglasses-device-manager.service  aiglasses.target
aiglasses/tests/: __init__.py  conftest.py
aiglasses/tests/integration/: __init__.py  test_end_to_end.py
aiglasses/tests/unit/: __init__.py  test_config.py  test_events.py  test_sdk.py  test_services.py
